# atlas-compiler

./: .gitignore  README.md  pyproject.toml
aot_gpt/: __init__.py  config.py  decorator.py
aot_gpt/cegar/: __init__.py  loop.py
aot_gpt/executor/: __init__.py  runtime.py
aot_gpt/lifter/: __init__.py  cache.py  translator.py
aot_gpt/neural/: __init__.py  agent.py  prompts.py  strategies.py
aot_gpt/verifier/: __init__.py  prover.py  symbolic.py
atlas/: __init__.py  config.py  decorator.py  module.py
atlas/cegar/: __init__.py  loop.py
atlas/executor/: __init__.py  runtime.py
atlas/lifter/: __init__.py  cache.py  translator.py  types.py
atlas/neural/: __init__.py  agent.py  strategies.py
atlas/verifier/: __init__.py  prover.py  symbolic.py
backend/: server.py
benchmarks/: __init__.py  runner.py
benchmarks/functions/: __init__.py  bitwise.py  numerical.py  reductions.py
benchmarks/results/: report.json  report.md
dashboard/: app.py
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css
tests/: test_integration.py  test_lifter.py  test_neural.py  test_verifier.py
