[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-compiler"
version = "0.1.0"
description = "Verifiable Neural JIT Compiler - AI-optimized Python with formal verification using GPT + Z3"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ayush Singh", email = "ayushsi42@gmail.com" }
]
keywords = [
    "compiler", "jit", "llvm", "optimization", "ai", "verification", 
    "z3", "gpt", "neural", "formal-verification", "numba"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies - minimal for library use
dependencies = [
    "numba>=0.59.0",
    "llvmlite>=0.42.0",
    "z3-solver>=4.12.0",
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
]

[project.optional-dependencies]
# For Redis caching (optional)
cache = ["redis>=5.0.0"]

# For the web dashboard
web = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
]

# For development
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

# All optional dependencies
all = [
    "redis>=5.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ayushsi42/atlas-compiler"
Repository = "https://github.com/ayushsi42/atlas-compiler"
Issues = "https://github.com/ayushsi42/atlas-compiler/issues"

[project.scripts]
atlas = "atlas.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["atlas"]

[tool.hatch.build.targets.sdist]
include = [
    "/atlas",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
